# akshare-a-share-skills

./: README.md  SKILL.md  USAGE_GUIDE.md  pyproject.toml
scripts/: __init__.py  cli.py  cli.py.bak  fundamentals.py  headers.py  hist.py  macro.py  market_summary.py  minute.py  news.py  rate_limiter.py  spot.py  stock_info.py  technical.py
