[project]
name = "akshare-a-share"
version = "0.1.0"
description = "A 股数据查询 skill，基于 AKShare"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.11.0",
    "pandas>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
